<resources>
    <string name="app_name">SoLightAre_mobile</string>
    <string name="title">SoLightAre</string>
    <string name="new_game">New Game</string>
    <string name="score">Score</string>
    <string name="exit">Exit</string>
    <string name="button_start">Start</string>
<!--    values for choosing the difficulty -->
    <string name="difficulty_text">Difficulty (number of columns)</string>
    <string-array name="diff_array">
        <item name="diff_easy" type="string">Easy</item>
        <item name="diff_medium" type="string">Medium</item>
        <item name="diff_hard" type="string">Hard</item>
        <item name="diff_you_kidding" type="string">You kidding -_-</item>
    </string-array>
    <string-array name="diff_array_values">
        <item>8</item>
        <item>6</item>
        <item>4</item>
        <item>2</item>
    </string-array>
<!--    values for choosing colors-->
    <string name="colors_text">Colors</string>
    <string-array name="colors_array">
        <item name="colors_1" type="string">One</item>
        <item name="colors_2" type="string">Two</item>
        <item name="colors_3" type="string">Three</item>
        <item name="colors_4" type="string">Four</item>
    </string-array>
    <string-array name="colors_array_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="packed_count_string">Packed count </string>
    <string name="time_string">Time </string>
    <string name="pack_it_up">Pack\n it\n up!</string>
    <string name="give_a_set">Give\n a\n set!</string>
    <string name="finish">Finish!</string>
    <string name="highscore">High scores</string>
    <string name="void_score_name">None yet</string>
    <string name="void_score_score">score</string>
    <string name="text_align_score">center</string>
    <string name="delete_scores">Delete scores</string>
    <string name="dialog_finish1">You scored</string>
    <string name="dialog_finish2">points! Please enter your name.</string>
    <string name="dialog_delete">Do you really want to delete all the scores?</string>
    <string name="dialog_confirm">Ok</string>
    <string name="dialog_decline">Cancel</string>
    <string name="default_score_name">Score name</string>
    <string name="game_finished">Game finished!</string>
</resources>
