<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseDiffActivity">

    <Spinner
        android:id="@+id/spinner_diff"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="112dp"
        android:entries="@array/diff_array"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="141dp"
        android:layout_height="63dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="300dp"
        android:onClick="begin_act"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_colors"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="112dp"
        android:entries="@array/colors_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_diff"
        android:layout_width="204dp"
        android:layout_height="25dp"
        android:text="@string/difficulty_text"
        app:layout_constraintBottom_toTopOf="@+id/spinner_diff"
        tools:layout_editor_absoluteX="92dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colors_text"
        app:layout_constraintBottom_toTopOf="@+id/spinner_colors"
        tools:layout_editor_absoluteX="517dp" />
</androidx.constraintlayout.widget.ConstraintLayout>